fix: header esponsive size, alignment

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,7 +22,7 @@
     @include media('<tablet') {
         padding-top: 3.5rem;   
         padding: 0 4rem;
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 }
 .header-subtitle {
@@ -33,6 +33,7 @@
     line-height: 1.75rem;
     padding: 0 18rem;
     @include media('<tablet') {
+        text-align: center;
         padding-top: 3.5rem;
         padding: 0 4rem;
         line-height: 1.2rem;
